validation can be queued or submitted